<resources>
    <string name="app_name">Prototipo_punto_de_venta</string>
    <string name="txt_cliente">Cliente:</string>
    <string name="btn_asignar">Asignar</string>
    <string name="txt_busqueda">Búsqueda de productos por nombre:</string>
    <string name="btn_aniadir">Añadir</string>
    <string name="btn_pedido">Realizar Pedido</string>
    <string name="txt_subtotal">Subtotal</string>
    <string name="txt_total">Total</string>
    <string name="txt_iva">IVA</string>
    <string name="txt_cantidad">Cantidad:</string>
    <string name="txt_nombre">Nombre:</string>
    <string name="txt_precio">Precio:</string>
    <string name="txt_descripcion">Descripción:</string>
    <string name="dialog_eliminar_item_title">¿Desea eliminar el producto del pedido?</string>
    <string name="texto_prueba">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id erat in nibh placerat mattis sodales non lorem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus neque libero, luctus a tristique sed, faucibus id odio. Nulla sollicitudin sit amet lectus a consectetur. Mauris dictum velit vitae augue faucibus placerat. Curabitur suscipit velit viverra, blandit arcu sed, imperdiet lorem. Ut lacinia rutrum placerat. Fusce ullamcorper risus vel dui auctor iaculis. Sed quis volutpat eros. Sed at augue in arcu semper tempor.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_cliente_list">Ruta de clientes</string>
    <string name="title_cliente_detail">Detalles Cliente</string>
</resources>
