<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumnodesarrollo1.protototipo_punto_de_venta.VentaActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_cliente"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_asignar"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/linear1"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtBusquedaProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_busqueda"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_aniadir"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_widget"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear_bottom1"
            >

            <TextView
                android:id="@+id/txtSubtotalValorBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:text="$ 98.000"
                android:textSize="15dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/txtSubtotalBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:text="@string/txt_subtotal"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear_bottom2"
            android:layout_toRightOf="@id/linear_bottom1"
            android:layout_marginLeft="15dp"
            >

            <TextView
                android:id="@+id/txtIvaValorBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:text="$ 18.620"
                android:textSize="15dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/txtIvaBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:text="@string/txt_iva"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear_bottom3"
            android:layout_toRightOf="@id/linear_bottom2"
            android:layout_marginLeft="15dp"
            >
            <TextView
                android:id="@+id/txtTotalValorBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:text="$ 98.000"
                android:textSize="15dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/txtTotalBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:text="@string/txt_total"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textAlignment="center"
                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bottom_btn"
            android:layout_alignParentRight="true"
            android:textColor="@color/bottom_text"
            android:text="@string/btn_pedido"
            android:padding="5dp"
            />
    </RelativeLayout>
</RelativeLayout>
